[package]
name = "nio-crypto"
version = "0.1.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"

[lib]
name = "nio_crypto"
crate-type = ["cdylib"]

[dependencies]
matrix-sdk-crypto = { path = "../nio-rust/matrix_sdk_crypto" }
matrix-sdk-common = { path = "../nio-rust/matrix_sdk_common" }
futures = "0.3.5"
serde = "1.0.115"
serde_json = "1.0.57"
http = "*"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]
